test/langtools/tools/javac/valhalla/lworld-values/CheckFinal.out
CheckFinal.java:14:13: compiler.err.cant.assign.val.to.final.var: fi
CheckFinal.java:15:13: compiler.err.cant.assign.val.to.final.var: fe
CheckFinal.java:17:13: compiler.err.cant.assign.val.to.final.var: xsf
CheckFinal.java:19:25: compiler.err.garbled.value.reference.instantiation
CheckFinal.java:19:29: compiler.err.cant.inherit.from.final: CheckFinal
5 errors
